--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title> LOGIC PUZZLE SOLVER </title>
   </head>
   <body>
+    <section id="settings" >
+      <label for="fname">Grid size:</label> <input type="number" id="x" size="3" value="5">
+    </section>
     <div id="world"> </div>
     <p>
     <button id='btn'> CALCULATE </button>
