added time elapsed

--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <section id="settings" >
       <label for="fname">Grid size:</label> <input type="number" id="x" size="3" value="5">
     </section>
-    <div id="world"> </div>
+      <div id="world"> </div>
     <p>
-    <button id='btn'> CALCULATE </button>
+      <button id='btn'> CALCULATE </button>
     <p>
-    <input type="text" id="key">
+      <input type="text" id="key">
     <p>
-    <button id='check'> LOOK FOR KEY </button>
+      <button id='check'> LOOK FOR KEY </button>
     <p>
-    <textarea readonly id='oldresults'> </textarea>
+      <textarea readonly id='oldresults'> </textarea>
     <p>
-    <section id='result'> </section>
+      <section id='result'> </section>
+      <section id='time'> </section>
     <p>
-
-
   </body>
 </html>
